# genai-lib

./: README.md  genai-lib.cabal
src/app/: Main.hs
src/app/GenAI/: Common.hs  Opts.hs
src/app/GenAILib/: Opts.hs
src/lib/GenAILib/: Common.hs  HTTP.hs
src/lib/GenAILib/System/: Log.hs
