cabal-version: 2.2

name: genai-lib
version: 1.3
synopsis: Library and command line tool for interacting with various generative
  AI LLMs
description: Library and command line tool for performing completions and chats
  with various generative AI LLMs (Large Language Models).
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2024 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  .gitignore
  README.md
  stack.yaml

source-repository head
  type: git
  location: https://github.com/dino-/genai-lib

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      aeson
    , base >=3 && <5
    , formatting
    , text

library
  import: lang
  exposed-modules:
    GenAILib.Common
    GenAILib.HTTP
    GenAILib.System.Log
  hs-source-dirs:
    src/lib
  build-depends:
    , bytestring
    , hslogger
    , http-client
    , servant
    , servant-client
    , string-conv

executable genai
  import: lang
  main-is: Main.hs
  hs-source-dirs:
    src/app
  other-modules:
    GenAI.Common
    GenAI.Opts
    Paths_genai_lib
  autogen-modules:
    Paths_genai_lib
  build-depends:
    , heredoc
    , genai-lib
    , optparse-applicative
    , prettyprinter
